<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:orientation="vertical"
    android:background="@drawable/app_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:admarvel="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center">

                <com.ridealongpivot.RoundedImageView
                    android:id="@+id/iv_user"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/logo_login"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"/>
                <ImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/camera_ic"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"/>

            </RelativeLayout>

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:progressTint="#ffcc00"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_f_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_f_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:imeOptions="actionNext"
                        android:hint="@string/f_name"
                        android:textColor="@android:color/white"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_l_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_l_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/l_name"
                        android:textColor="@android:color/white"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@android:color/white"
                    android:hint="@string/short_bio"
                    android:textColor="@android:color/white"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:hint="@string/address"
                    android:textColor="@android:color/white"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:hint="@string/zip"
                    android:maxLength="5"
                    android:textColor="@android:color/white"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:hint="@string/city"
                    android:textColor="@android:color/white"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:hint="@string/state"
                    android:textColor="@android:color/white"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:hint="@string/dob"
                    android:focusable="false"
                    android:clickable="true"
                    android:enabled="true"
                    android:textColor="@android:color/white"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/ride_share_provide"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.5">

                    <Spinner
                        android:id="@+id/sp_ride_provider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white">

                    </Spinner>

                    <EditText
                        android:id="@+id/et_ride_provider"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:maxLines="1"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/ride_share_provide"
                        android:background="@drawable/stroke_edit_text"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/darker_gray"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/provider_level"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.5">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager">

                    </android.support.v7.widget.RecyclerView>

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/cb_level_other"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="Other"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        style="@style/CheckBox"/>

                    <EditText
                        android:id="@+id/et_level"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        android:maxLines="1"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/provider_level"
                        android:background="@drawable/stroke_edit_text"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/darker_gray"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_info"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:hint="@string/car_model"
                    android:textColor="@android:color/white"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_car_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_car_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:hint="@string/car_number"
                    android:textColor="@android:color/white"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_car_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_car_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionNext"
                    android:hint="@string/car_color"
                    android:textColor="@android:color/white"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_referral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_referral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:imeOptions="actionDone"
                    android:hint="@string/referral"
                    android:textColor="@android:color/white"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_update_profile"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/update_profile"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_marginBottom="80dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_bottom"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
    </com.google.android.gms.ads.AdView>

    <!--<com.admarvel.android.ads.AdMarvelView
        android:id="@+id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        admarvel:backgroundColor="#726D6D"
        admarvel:textBackgroundColor="#726D6D"
        admarvel:textFontColor="#00FF00"
        admarvel:textBorderColor="#000000"
        admarvel:adMarvelViewSize="HEIGHT_50" />-->

</RelativeLayout>